<resources>
    <string name="app_name">Asistente Académico</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="iniciar_sesion">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="digite_el_nombre">Digite su nombre</string>
    <string name="digite_el_telefono">Digite su teléfono</string>
    <string name="repassword">Repetir contraseña</string>
    <string name="resultado">Resultado</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="cine">Cine</string>
    <string name="gimnasio">Gimnasio</string>
    <string name="leer">Leer</string>
    <string name="series">Series</string>
    <string name="genero">Género:</string>
    <string name="msg_error_campos_vacios">Debe digitar todos los campos</string>
    <string name="fecha_de_nacimiento">Seleccione su fecha de nacimiento</string>
    <string name="hobbies">Hobbies:</string>
    <string name="lugar_nacimiento">Elija su lugar de nacimiento</string>
    <string name="contrasenasdiferentes">Las contraseñas no coinciden</string>
    <string name="cerrar">cerrar</string>
    <string name="mantenersesion">Mantener sesión iniciada</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Asistente académico UdeA</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_notas">Notas</string>
    <string name="menu_fechacitacion">Fecha citación</string>
    <string name="menu_horario">Horario</string>
    <string name="menu_calendario">Calendario</string>
    <string name="menu_calculadora">Calcula</string>
    <string name="menu_cerrarsesion">Cerrar sesión</string>
    <string name="menu_eventos">Eventos</string>
    <string name="promedio">Promedio:</string>
    <string name="avance">Avance:</string>

    <string name="porc">%</string>
    <string name="facude">Facultad de </string>
    <string name="ovalo">\"ovalo\"</string>
    <string name="porcentaje">%</string>
    <string name="descripcion">Descripción</string>
    <string name="nota">Nota</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="W">W</string>
    <string name="J">J</string>
    <string name="V">V</string>
    <string name="S">S</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="promsemestre">Promedio semestre</string>
    <string name="notafinalcurso">Nota final curso</string>
    <string name="recordatorios">Recordatorios</string>
    <string name="consultarcitacion">Consultar citación</string>
    <string name="calendarioac">Calendario académico</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="curso">Curso</string>
    <string name="creditos">Créditos</string>
    <string name="calcular">Calcular</string>
    <string name="matr_culas">Matrículas</string>
    <string name="ajustes">Ajustes</string>
    <string name="matr_culasExt">Matrículas Extemporáneas</string>
    <string name="clases">Clases</string>
    <string name="exmsfinales">Exámenes finales</string>
    <string name="habilitaciones">Habilitaciones</string>
    <string name="validaciones">Validaciones</string>
    <string name="terminacionof">Terminación Oficial</string>
    <string name="publicacionOferta">Publicación de la Oferta</string>
    <string-array name="cursos_inscritos" />
    <string name="o">o</string>
    <string name="ingresarcongoogle">Ingresa con Google</string>
    <string name="espacio" />
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="w">W</string>
    <string name="j">J</string>
    <string name="v">V</string>
    <string name="_6_am">6 am</string>
    <string name="_10_am">10 am</string>
    <string name="_7_am">7 am</string>
    <string name="_8_am">8 am</string>
    <string name="_9_am">9 am</string>
    <string name="_12_am">12 am</string>
    <string name="_11_am">11 am</string>
    <string name="_1_pm">1 pm</string>
    <string name="_2_pm">2 pm</string>
    <string name="_3_pm">3 pm</string>
    <string name="_4_pm">4 pm</string>
    <string name="_5_pm">5 pm</string>
    <string name="_6_pm">6 pm</string>
    <string name="_7_pm">7 pm</string>
    <string name="_8_pm">8 pm</string>
    <string name="_9_pm">9 pm</string>
    <string name="_10_pm">10 pm</string>
    <string name="aula">Aula:</string>
    <string name="profesor">Profesor:</string>
    <string name="cr_ditos">Créditos</string>
    <string name="agregar_t_tulo">Agregar título</string>
    <string name="agregar_descripci_n">Agregar descripción</string>
    <string name="title_activity_add_event2">AddEventActivity2</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>