<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:stretchColumns="1"
    tools:context=".NotaDellateActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorAccent">

            <TextView
                android:layout_weight="0.2"
                android:fontFamily="@font/lato"
                android:padding="10dip"
                android:text="@string/porcentaje"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_weight="0.6"
                android:fontFamily="@font/lato"
                android:padding="10dip"
                android:text="@string/descripcion"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_weight="0.2"
                android:fontFamily="@font/lato"
                android:padding="10dip"
                android:text="@string/nota"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

